# kvm-vdi

./: .htaccess  LICENSE  README.md  about.php  add_ad_group.php  add_client.php  add_credential.php  add_hypervisor.php  add_pool.php  add_user.php  backend.php  change_password.php  client.php  client_hb.php  client_index.php  client_login.php  client_pools.php  client_power.php  clients_in_pool.php  copy_disk.php  create_vm.php  dashboard.php  delete_vm.php  dhcpconf_gen.php  draw_html5_buttons.php  draw_table.php  hypervisor.php  index.php  list_credentials.php  list_hypervisors.php  list_machines.php  list_users.php  lock_vm.php  login.php  logout.php  maintenance.php  manage_client_pool.php  manage_clientmaps_do.php  manage_vm_pool.php  manage_vmmaps_do.php  (+20 more)
KVM/hypervisors/: config  copy-file  sudoers  vdi-agent  vdi-wrapper
OpenStack/: README.md
OpenStack/broker/: ConsoleProxy.py  README.md  VMBuilder.py  Variables.py  kvm-vdi-broker  kvm-vdi.cfg
OpenStack/compute_node/: vdi-wrapper
functions/: clients.xml  config.php  config.php_dist  config.php_kvm  config.php_openstack  functions.php  motd.php
guest_agent/: LICENSE.txt  README.md
guest_agent/ovirt-guest-agent/: .gitattributes  CredServer.py  GuestAgentLinux2.py  GuestAgentWin32.py  LockActiveSession.py  LogoutActiveUser.py  Makefile.am  Makefile.el5  OVirtAgentLogic.py  OVirtGuestService.py  README-windows.txt  VirtIoChannel.py  WinFile.py  bytesio.py  default-logger.ini  default.ini  hibernate  hooks.py  org.ovirt.vdsm.Credentials.conf  ovirt-guest-agent.el5.rules  ovirt-guest-agent.in  ovirt-guest-agent.py  ovirt-guest-agent.rules  ovirt-guest-agent.service  ovirt-guest-agent.sles  setup.py  timezone.py  version.py  win-guest-agent-build-exe.bat
guest_agent/ovirt-guest-agent/consoleapps/: Makefile.am  ovirt-container-list  ovirt-flush-caches  ovirt-hibernate  ovirt-locksession  ovirt-logout  ovirt-shutdown
guest_agent/ovirt-guest-agent/pam/: Makefile.am  ovirt-shutdown
hypervisors/: config  copy-file  get-snap  kvm-snap  sudoers  vdi-agent  vdi-agent.service  vdi-mass-shutdown  vdi-mass-start  vdi-new-machines  vdi-shutdown  vdi-snapshots  vdi-wrapper  vdi-xmledit
inc/PNotify/: pnotify.custom.min.js
inc/css/: custom.css  dashboard.css
inc/infrastructure/: AddPool.php  ListMAC.php  ListVms.php  ManageClientMaps.php  ManageCredentials.php  ManageVMMaps.php  TableState.php  (+4 more)
install/: Windows  index.php
spice_html5/: index.php  run.js
sql/: 20160718001.sql  20160720001.sql  20160721001.sql  20160803001.sql  20160831001.sql  20161129001.sql  20170220001.sql  20170306001.sql  20170310001.sql  20170322001.sql  20170331001.sql  vdi.sql
thin_clients/: config  kvm-vdi-client  kvm-vdi-client.py  kvm-vid-client  numlock_on  resize  vdi  vdi.service  vdi_init
(+85 files in other folders)
